--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <div class="row card-toggle">
-                <div class="col-sm-11 col-md-6 mb-3 p-0">
+                <div class="col-sm-11 col-md-6 col-lg-6 mb-3">
                     <div class="card">
                         <div class="card-body" data-toggle="collapse" href="#collapseBox_1" role="button" aria-expanded="false" aria-controls="collapseBox_1">
                             <h6 class="card-title">Перспективные ICO проекты.</h6>
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-11 col-md-6 mb-3 p-0">
+                <div class="col-sm-11 col-md-6 col-lg-6 mb-3 pr-0">
                     <div class="card">
                         <div class="card-body" data-toggle="collapse" href="#collapseBox_2" role="button" aria-expanded="false" aria-controls="collapseBox_2">
                             <h6 class="card-title">Реферальная система</h6>
@@ -113,13 +113,13 @@
 
             <div class="row mb-3 p-0">
                 <div class="card-deck col-md-12">
-                    <div class="card">
+                    <div class="card col-md-6">
                         <div class="card-body ">
                             <h6 class="card-title">Комбинированный маркетинг</h6>
                             <p class="card-text">Почему именно комбтнтрованный маркетинг?</p>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card col-md-6 col-lg-6">
                         <div class="card-body">
                             <h5 class="card-title">Мэтчинг бонус</h5>
                         </div>
@@ -128,14 +128,14 @@
             </div>
 
             <div class="row mb-3 p-0">
-                <div class="card-deck col-md-12">
-                    <div class="card">
+                <div class="card-deck col-md-12 col-lg-12">
+                    <div class="card col-md-6 col-lg-6 pr-2">
                         <div class="card-body">
                             <h5 class="card-title">Бонус за личное приглашение</h5>
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card col-md-6 col-lg-6">
                         <div class="card-body">
                             <h6 class="card-title">Карьерный рост</h6>
                             <p class="card-text float-left">Подниматься по карьерной лестнице выгодно всем!</p>
@@ -146,8 +146,8 @@
             </div>
 
             <div class="row mb-5 p-0">
-                <div class="card-deck col-md-12">
-                    <div class="card">
+                <div class="card-deck col-md-12 col-lg-12">
+                    <div class="card col-md-6 col-lg-6">
                         <div class="card-body">
                             <h6 class="card-title">Пассивный доход</h6>
                             <p class="card-text">Мечта инвестора - это удачно запустить в работу свои денеги. Как это происходит?</p>
@@ -155,7 +155,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card col-md-6 col-lg-6">
                         <div class="card-body">
                             <h6 class="card-title">Техническая поддержка</h6>
                             <p class="card-text">Обеспечит своевременный ответ на любой вопрос.</p>
@@ -567,27 +567,27 @@
 
         <div class="container-fluid eighth-panel mb-5">
             <div class="row mb-4 row-card-bonus">
-                <div class="col-sm-9 col-md-10 col-lg-4">
+                <div class="col-sm-9 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
-                            <div class="p-4 col-sm col-lg">
+                            <div class="p-4 col-sm col-md col-lg">
                                 <h6 class="card-title"><span class="gift emerald-crown mr-3"></span>Silver</h6>
                                 <p class="card-text mb-0 text-color-light-gray">Условия</p>
                                 <p class="card-text text-color-light-gray"><span class="font-weight-bold">80 ETH</span> в меньшей команде</p>
                                 <p class="card-text mb-0 text-color-light-gray">Приз</p>
                                 <p class="card-text font-weight-bold">3.2 ETH<span class="font-weight-normal text-color-light-gray">или</span> IPhone X</p>
                             </div>
-                            <div class="col-sm col-lg">
+                            <div class="col-sm col-lg col-md">
                                 <img src="images/gift-1.png" class="img-gift"/>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-9 col-md-10 col-lg-4">
+                <div class="col-sm-9 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
-                            <div class="p-4 col-sm">
+                            <div class="p-4 col-sm col-md">
                                 <h6 class="card-title"><span class="gift diamond-crown mr-3"></span>Gold</h6>
                                 <p class="card-text mb-0 text-color-light-gray">Условия</p>
                                 <p class="card-text text-color-light-gray"><span class="font-weight-bold">400 ETH</span> в меньшей команде <br/>
@@ -596,17 +596,17 @@
                                 <p class="card-text mb-0 text-color-light-gray">Приз</p>
                                 <p class="card-text font-weight-bold">12.8 ETH <span class="font-weight-normal text-color-light-gray">или</span> Путешествие</p>
                             </div>
-                            <div class="col-sm">
+                            <div class="col-sm col-md">
                                 <img src="images/gift-2.png" class="img-gift"/>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-9 col-md-10 col-lg-4">
+                <div class="col-sm-9 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
-                            <div class="p-4 col-sm">
+                            <div class="p-4 col-sm col-md">
                                 <h6 class="card-title"><span class="gift red-diamond-crown mr-3"></span>Platinum</h6>
                                 <p class="card-text mb-0 text-color-light-gray">Условия</p>
                                 <p class="card-text text-color-light-gray"><span class="font-weight-bold">1200 ETH</span> в меньшей команде <br/>
@@ -615,17 +615,17 @@
                                 <p class="card-text mb-0 text-color-light-gray">Приз</p>
                                 <p class="card-text font-weight-bold">132 ETH <span class="font-weight-normal text-color-light-gray">или</span> Часы</p>
                             </div>
-                            <div class="col-sm">
+                            <div class="col-sm col-md">
                                 <img src="images/gift-3.png" class="img-gift"/>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-9 col-md-10 col-lg-4">
+                <div class="col-sm-9 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
-                            <div class="p-4 col-sm">
+                            <div class="p-4 col-sm col-md">
                                 <h6 class="card-title"><span class="gift blue-diamond-crown mr-3"></span>Perl</h6>
                                 <p class="card-text mb-0 text-color-light-gray">Условия</p>
                                 <p class="card-text text-color-light-gray mb-1"><span class="font-weight-bold">4400 ETH</span> в меньшей ноге <br/>
@@ -634,17 +634,17 @@
                                 <p class="card-text mb-0 text-color-light-gray">Приз</p>
                                 <p class="card-text font-weight-bold">128 ETH <span class="font-weight-normal text-color-light-gray">или</span> Машина</p>
                             </div>
-                            <div class="col-sm">
+                            <div class="col-sm col-md">
                                 <img src="images/gift-4.png" class="img-gift"/>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-9 col-md-10 col-lg-4">
+                <div class="col-sm-9 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
-                            <div class="p-4 col-sm">
+                            <div class="p-4 col-sm col-md">
                                 <h6 class="card-title"><span class="gift white-diamond-crown mr-3"></span>Rubin</h6>
                                 <p class="card-text mb-0 text-color-light-gray">Условия</p>
                                 <p class="card-text text-color-light-gray"><span class="font-weight-bold">10 800 ETH</span> в меньшей ноге <br/>
@@ -653,17 +653,17 @@
                                 <p class="card-text mb-0 text-color-light-gray">Приз</p>
                                 <p class="card-text font-weight-bold">256 ETH <span class="font-weight-normal text-color-light-gray">или</span> Квартира</p>
                             </div>
-                            <div class="col-sm">
+                            <div class="col-sm col-md">
                                 <img src="images/gift-5.png" class="img-gift"/>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-9 col-md-10 col-lg-4">
+                <div class="col-sm-9 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
-                            <div class="p-4 col-sm">
+                            <div class="p-4 col-sm col-md">
                                 <h6 class="card-title"><span class="gift black-diamond-crown mr-3"></span>Diamond</h6>
                                 <p class="card-text mb-0 text-color-light-gray">Условия</p>
                                 <p class="card-text text-color-light-gray"><span class="font-weight-bold">42 800 ETH</span> в меньшей ноге <br/>
@@ -672,7 +672,7 @@
                                 <p class="card-text mb-0 text-color-light-gray">Приз</p>
                                 <p class="card-text font-weight-bold">1 280 ETH <span class="font-weight-normal text-color-light-gray">или</span> Вилла</p>
                             </div>
-                            <div class="col-sm">
+                            <div class="col-sm col-md">
                                 <img src="images/gift-6.png" class="img-gift"/>
                             </div>
                         </div>
