--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
 
             <div class="row mb-3 p-0">
                 <div class="card-deck col-md-12">
-                    <div class="card col-md-6">
+                    <div class="card col-md-6 col-lg-6">
                         <div class="card-body ">
                             <h6 class="card-title">Комбинированный маркетинг</h6>
                             <p class="card-text">Почему именно комбтнтрованный маркетинг?</p>
@@ -129,7 +129,7 @@
 
             <div class="row mb-3 p-0">
                 <div class="card-deck col-md-12 col-lg-12">
-                    <div class="card col-md-6 col-lg-6 pr-2">
+                    <div class="card col-md-6 col-lg-6">
                         <div class="card-body">
                             <h5 class="card-title">Бонус за личное приглашение</h5>
                         </div>
@@ -137,7 +137,7 @@
 
                     <div class="card col-md-6 col-lg-6">
                         <div class="card-body">
-                            <h6 class="card-title">Карьерный рост</h6>
+                            <h5 class="card-title">Карьерный рост</h5>
                             <p class="card-text float-left">Подниматься по карьерной лестнице выгодно всем!</p>
                             <a class="btn btn-gradient float-right"><span class="icon icon-arrow-down"></span></a>
                         </div>
@@ -149,7 +149,7 @@
                 <div class="card-deck col-md-12 col-lg-12">
                     <div class="card col-md-6 col-lg-6">
                         <div class="card-body">
-                            <h6 class="card-title">Пассивный доход</h6>
+                            <h5 class="card-title">Пассивный доход</h5>
                             <p class="card-text">Мечта инвестора - это удачно запустить в работу свои денеги. Как это происходит?</p>
 
                         </div>
@@ -157,7 +157,7 @@
 
                     <div class="card col-md-6 col-lg-6">
                         <div class="card-body">
-                            <h6 class="card-title">Техническая поддержка</h6>
+                            <h4 class="card-title">Техническая поддержка</h4>
                             <p class="card-text">Обеспечит своевременный ответ на любой вопрос.</p>
 
                         </div>
@@ -205,7 +205,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div>
-                                <div class="col-sm col-lg-6">
+                                <div class="col-sm col-lg-6 d-flex flex-column">
                                     <div class="d-flex align-items-stretch mb-4">
                                         <div class="box-image">
                                             <div class="border-image"></div>
@@ -224,11 +224,19 @@
                                                 никогда не рисковать.</p>
                                             <p><span class="font-weight-bold"> Осознанный риск —</span>
                                                 путь к финансовому благополучию</p>
+                                            <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                путь к финансовому благополучию</p>
+                                            <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                путь к финансовому благополучию</p>
+                                            <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                путь к финансовому благополучию</p>
+                                            <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                путь к финансовому благополучию</p>
                                         </div>
                                         <span class="icon icon-quote"></span>
                                     </div>
                                 </div>
-                                <div class="col-sm col-lg-6">
+                                <div class="col-sm col-lg-6 d-flex flex-column">
                                     <div class="d-flex align-items-stretch mb-4">
                                         <div class="box-image">
                                             <div class="border-image"></div>
@@ -252,7 +260,7 @@
 
                         <div class="carousel-item">
                             <div>
-                                <div class="col-sm col-lg-6">
+                                <div class="col-sm col-lg-6 d-flex flex-column">
                                     <div class="d-flex align-items-stretch mb-4">
                                         <div class="box-image">
                                             <div class="border-image"></div>
@@ -275,7 +283,7 @@
                                         <span class="icon icon-quote"></span>
                                     </div>
                                 </div>
-                                <div class="col-sm col-lg-6">
+                                <div class="col-sm col-lg-6 d-flex flex-column">
                                     <div class="d-flex align-items-stretch mb-4">
                                         <div class="box-image">
                                             <div class="border-image"></div>
@@ -551,7 +559,7 @@
 
                 <div class="box-image col-md-11 col-lg-7">
                     <img src="images/people-4.png">
-                    <a class="btn btn-gradient col-9 ml-5 btn-registration py-2">Зарегистрироваться <span class="icon icon-sign-up ml-3 align-middle"></span></a>
+                    <a class="btn btn-gradient col-9 col-lg-7 ml-5 btn-registration py-2">Зарегистрироваться <span class="icon icon-sign-up ml-3 align-middle"></span></a>
                 </div>
             </div>
 
