--- a/src/index.html
+++ b/src/index.html
@@ -14,44 +14,43 @@
     <body>
         <div class="container-fluid header-panel">
             <div class="row">
-                <div class="col-7 col-lg-7 left-side-box">
+                <div class="col-12 col-sm-12 col-lg-7 left-side-box">
                     <div class="row">
                         <div class="logo">
                             <a href="#" >
                                 <img src="images/logo.png" />
                             </a>
                         </div>
-                    </div>
 
-                    <div class="row flex-column">
-                        <h1 class="title-big-1 font-weight-bold">Стань королем<br/><span class="text-color-purple">нового рынка</span></h1>
-                        <p class="text-color-light-gray p-0 col-lg-7 col-7">Рынок ICO - молодой, но динамика его развития впечатляет! Зарабатывать на ICO  можно и нужно! </p>
-                        <a class="btn btn-gradient col-lg-4 col-md-5 col-7">Но как?</a>
+                        <h1 class="title-big-1 font-weight-bold">Стань королём<br/><span class="text-color-purple">нового рынка</span></h1>
+                        <p class="text-color-light-gray p-0 col-lg-7">Рынок ICO - молодой, но динамика его развития впечатляет! Зарабатывать на ICO  можно и нужно! </p>
+                        <a class="btn btn-gradient col-lg-4 col-md-4 col-4">Но как?</a>
                     </div>
 
                     <div>
                         <img src="images/illustration.png" class="lion-header">
-                    </div>
-
-                    <div class="row">
-                        <div class="btn-group" role="group" aria-label="Basic example">
-                            <a class="btn btn-lang">ENG</a>
-                            <a class="btn btn-lang active">РУС</a>
-                            <a class="btn btn-lang">УКР</a>
-                        </div>
                     </div>
                 </div>
 
                 <div class="col-5 col-lg-5 right-side-box">
                     <div class="row">
                         <h1 class="king-size mb-5 text-border-white"><span class="who">Кто</span><br/>новый король?</h1>
-
-                        <div class="btn-group" role="group" aria-label="Registration">
-                            <a class="btn btn-transparent font-weight-bold">Регистрация <span class="icon icon-sign-up align-middle ml-2"></span></a>
-                            <a class="btn btn-transparent font-weight-bold">Вход <span class="icon icon-sign-in align-middle ml-2"></span></a>
-                        </div>
                     </div>
                 </div>
+
+                <div class="col-12 btn-bottom">
+                    <div class="btn-group btn-group-lang" role="group" aria-label="Basic example">
+                        <a class="btn btn-lang">ENG</a>
+                        <a class="btn btn-lang active">РУС</a>
+                        <a class="btn btn-lang">УКР</a>
+                    </div>
+
+                    <div class="btn-group btn-group-sign-in" role="group" aria-label="Registration">
+                        <a class="btn btn-transparent font-weight-bold">Регистрация <span class="icon icon-sign-up align-middle ml-2"></span></a>
+                        <a class="btn btn-transparent font-weight-bold">Вход <span class="icon icon-sign-in align-middle ml-2"></span></a>
+                    </div>
+                </div>
+
             </div>
         </div>
 
@@ -84,6 +83,15 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="collapse col-sm-11 col-md-10 mb-4" id="collapseBox_1">
+                    <div class="toggle-element">
+                        <p><strong>Выбор перспективного проекта ICO</strong> – это кропотливый и зачастую очень длительный процесс.</p>
+                        <p>Для оптимизации этой задачи, мы привлекли в нашу Компанию лучших аналитиков, имеющих положительный опыт участия в ICO. В итоге, вам будут представлены аналитические отчеты по каждому проекту. На основании этой информации вы сможете принять взвешенное решение. Окончательный выбор, инвестировать в предложенный проект ICO или воздержаться, всегда остается за вами. Но, даже если вы решаете воздержаться от участия в предложенном проекте, вы остаетесь в маркетинге вместе с построенной вами структурой. В этом случае  вы не будете получать реферальные бонусы от работы команды, до оплаты вами одного из пакетов. Также, мы всегда предупреждаем, что работаем на рынке больших рисков, где можно как хорошо заработать, так и потерять деньги. При этом, Администрация Компании будет делать все возможное, чтобы минимизировать эти риски. Но вы должны понимать, что однозначных гарантий роста цены токенов - Компания  не дает. Мы гарантируем только положенные по маркетингу выплаты</p>
+                        <p><strong>Самый большой риск в жизни</strong>s — не рисковать. Тогда, в вашей жизни точно ничего не изменится к лучшему.</p>
+                    </div>
+                </div>
+
                 <div class="col-sm-11 col-md-6 col-lg-6 mb-3 pr-0">
                     <div class="card">
                         <div class="card-body" data-toggle="collapse" href="#collapseBox_2" role="button" aria-expanded="false" aria-controls="collapseBox_2">
@@ -91,14 +99,6 @@
                             <p class="card-text">Позволяет заработать на приглашении новых инвесторов, и на инвестициях построенной вами структуры во все последующие проекты ICO. Интересно как это работает?</p>
 
                         </div>
-                    </div>
-                </div>
-
-                <div class="collapse col-sm-11 col-md-10 mb-4" id="collapseBox_1">
-                    <div class="toggle-element">
-                        <p><strong>Выбор перспективного проекта ICO</strong> – это кропотливый и зачастую очень длительный процесс.</p>
-                        <p>Для оптимизации этой задачи, мы привлекли в нашу Компанию лучших аналитиков, имеющих положительный опыт участия в ICO. В итоге, вам будут представлены аналитические отчеты по каждому проекту. На основании этой информации вы сможете принять взвешенное решение. Окончательный выбор, инвестировать в предложенный проект ICO или воздержаться, всегда остается за вами. Но, даже если вы решаете воздержаться от участия в предложенном проекте, вы остаетесь в маркетинге вместе с построенной вами структурой. В этом случае  вы не будете получать реферальные бонусы от работы команды, до оплаты вами одного из пакетов. Также, мы всегда предупреждаем, что работаем на рынке больших рисков, где можно как хорошо заработать, так и потерять деньги. При этом, Администрация Компании будет делать все возможное, чтобы минимизировать эти риски. Но вы должны понимать, что однозначных гарантий роста цены токенов - Компания  не дает. Мы гарантируем только положенные по маркетингу выплаты</p>
-                        <p><strong>Самый большой риск в жизни</strong>s — не рисковать. Тогда, в вашей жизни точно ничего не изменится к лучшему.</p>
                     </div>
                 </div>
 
@@ -115,41 +115,42 @@
                 <div class="card-deck col-md-12">
                     <div class="card col-md-6 col-lg-6">
                         <div class="card-body ">
-                            <h6 class="card-title">Комбинированный маркетинг</h6>
+                            <h4 class="card-title">Комбинированный маркетинг</h4>
                             <p class="card-text">Почему именно комбтнтрованный маркетинг?</p>
                         </div>
                     </div>
                     <div class="card col-md-6 col-lg-6">
                         <div class="card-body">
-                            <h5 class="card-title">Мэтчинг бонус</h5>
+                            <h4 class="card-title">Мэтчинг бонус</h4>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="row mb-3 p-0">
-                <div class="card-deck col-md-12 col-lg-12">
-                    <div class="card col-md-6 col-lg-6">
+                <div class="card-deck col-lg-12">
+                    <div class="card col-sm-12 col-md-6 col-lg-6">
                         <div class="card-body">
-                            <h5 class="card-title">Бонус за личное приглашение</h5>
+                            <h4 class="card-title">Бонус за личное приглашение</h4>
                         </div>
                     </div>
 
                     <div class="card col-md-6 col-lg-6">
                         <div class="card-body">
-                            <h5 class="card-title">Карьерный рост</h5>
-                            <p class="card-text float-left">Подниматься по карьерной лестнице выгодно всем!</p>
                             <a class="btn btn-gradient float-right"><span class="icon icon-arrow-down"></span></a>
+                            <h4 class="card-title">Карьерный рост</h4>
+                            <p class="card-text float-left">Подниматься по карьерной лестнице выгодно всем!</p>
+
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="row mb-5 p-0">
-                <div class="card-deck col-md-12 col-lg-12">
+                <div class="card-deck col-lg-12">
                     <div class="card col-md-6 col-lg-6">
                         <div class="card-body">
-                            <h5 class="card-title">Пассивный доход</h5>
+                            <h4 class="card-title">Пассивный доход</h4>
                             <p class="card-text">Мечта инвестора - это удачно запустить в работу свои денеги. Как это происходит?</p>
 
                         </div>
@@ -344,39 +345,37 @@
                 <h5 class="col-sm-9 col-md-10 col-lg-7 mb-3 p-0">Платформа UMC призвана решить главные проблемы управления рекламой в рамках единой системы:</h5>
 
                 <div class="row">
-                    <div class="col-md-12 col-lg-3">
+                    <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="colored-rounds opst-4"></div>
                         <p class="pl-2">Отсутствие удобных систем для оперативного и понятного анализа плюсов и минусов продуктов и услуг</p>
                     </div>
 
-                    <div class="col-md-12 col-lg-3">
+                    <div class="col-md-6 col-lg-4 col-xl-3">
                         <span class="colored-rounds opst-5"></span>
                         <p class="pl-2">Отсутствие возможности достоверно проверить качество целевой аудитории</p>
                     </div>
 
-                    <div class="col-md-12 col-lg-3">
+                    <div class="col-md-6 col-lg-4 col-xl-3">
                         <span class="colored-rounds opst-6"></span>
                         <p class="pl-2">Высокие затраты времени на организацию процессов развития и продвижения площадок/продуктов/услуг</p>
                     </div>
 
-                    <div class="col-md-12 col-lg-3">
+                    <div class="col-md-6 col-lg-4 col-xl-3">
                         <span class="colored-rounds opst-7"></span>
                         <p class="pl-2">Дополнительные косвенные финансовые затраты и комиссии</p>
                     </div>
-                </div>
 
-                <div  class="row">
-                    <div class="col-md-12 col-lg-3">
+                    <div class="col-md-6 col-lg-4 col-xl-3">
                         <span class="colored-rounds opst-8"></span>
                         <p class="pl-2">Сложность контроля исполнения обязательств</p>
                     </div>
 
-                    <div class="col-md-12 col-lg-3">
+                    <div class="col-md-6 col-lg-4 col-xl-3">
                         <span class="colored-rounds opst-9"></span>
                         <p  class="pl-2">Сложность отбора подходящих рекламных каналов</p>
                     </div>
 
-                    <div class="col-md-12 col-lg-3">
+                    <div class="col-md-6 col-lg-4 col-xl-3">
                         <span class="colored-rounds"></span>
                         <p  class="pl-2">Проблемы с массовым запуском рекламных кампаний в мессенджерах</p>
                     </div>
@@ -393,7 +392,7 @@
             </div>
 
             <div class="row mb-5">
-                <div class="col-md-10 col-lg-5">
+                <div class="col-md-6 col-lg-5">
                     <h5>Как мы видим решение</h5>
                     <ul class="list-style-plus">
                         <li class="mb-3">Единая точка входа для владельцев канала и рекламодателей, что позволяет значительно снизить затраты времени и бюджета на организацию коммуникации</li>
@@ -404,7 +403,7 @@
                     </ul>
                 </div>
 
-                <div class="col-md-10 col-lg-7 right-side-box">
+                <div class="col-md-6 col-lg-7 right-side-box">
                     <h5>Этапы <span class="font-weight-bold">ICO</span></h5>
 
                     <div class="col-4 col-md-4 col-lg-4 step-ico active px-0">
@@ -486,33 +485,34 @@
 
             <div  class="mb-5">
                 <form class="form-contacts">
-                    <div class="row mb-4">
-                        <div class="col-4 mr-3 p-0">
+                    <div class="row">
+                        <div class="col-12 col-lg-4 mr-4 p-0 mb-4">
                             <label for="inputName">Имя</label>
                             <input type="text" class="form-control p-3" id="inputName" placeholder="Николай">
                         </div>
-                        <div class="col-4 mr-3 p-0">
+                        <div class="col-12 col-lg-4 mr-4 p-0 mb-4">
                             <label for="inputPhone">Телефон</label>
                             <input type="text" class="form-control p-3" id="inputPhone" placeholder="(00) 000-00-00">
                         </div>
-                        <div class="col-3 mr-3 p-0">
+                        <div class="col-12 col-lg-3 p-0 mb-4">
                             <label for="inputEmail">Почта</label>
                             <input type="email" class="form-control p-3" id="inputEmail" placeholder="example@gmail.com">
                         </div>
                     </div>
-                    <div class="row  mb-4">
-                        <div class="col-8 mr-3 p-0">
-                            <label for="inputDescribe">Расскажите про Ваш проект</label>
-                            <textarea type="text" rows="3" id="inputDescribe" class="form-control py-3" placeholder="Имя"></textarea>
-                        </div>
-                        <div class="col-3 ml-3 p-0">
+
+                    <div class="row mb-4 reverse-row">
+                        <div class="col-12 col-lg-halg-3 p-0 mb-4">
                             <label for="siteProject">Сайт проекта</label>
                             <input type="text" class="form-control" id="siteProject" placeholder="myproject.com">
+                        </div>
+                        <div class="col-12 col-lg-8 p-0 mb-4">
+                            <label for="inputDescribe">Расскажите про Ваш проект</label>
+                            <textarea type="text" rows="3" id="inputDescribe" class="form-control py-3" placeholder="Имя"></textarea>
                         </div>
                     </div>
 
                     <div class="row d-flex flex-column mb-4">
-                        <button type="button" class="btn btn-gradient-border font-weight-bold col-sm-7 col-md-5 col-lg-3 mb-1">Прикрепить файлы <span class="icon icon-clip ml-2"></span></button>
+                        <button type="button" class="btn btn-gradient-border font-weight-bold col-sm-12 col-md-5 col-lg-3 mb-1">Прикрепить файлы <span class="icon icon-clip ml-2"></span></button>
                         <small id="passwordHelpBlock" class="form-text text-muted text-color-light-gray">
                             Это может быть презентация компании,<br/>
                             Публичная оферта, видео и т.д.
@@ -520,7 +520,7 @@
                     </div>
 
                     <div class="row d-flex flex-column">
-                        <button type="button" class="btn btn-gradient col-sm-8 col-lg-5 mb-4">Отправить заявку</button>
+                        <button type="button" class="btn btn-gradient col-sm-12 col-lg-5 mb-4">Отправить заявку</button>
                         <p class="text-color-light-gray">Рассмотрение заявки происходит в течении <sapn class="font-weight-bold">1-2 недель</sapn></p>
                     </div>
                 </form>
@@ -691,8 +691,8 @@
 
         <div class="container eighth-panel mb-5">
             <div class="d-flex align-items-baseline justify-content-center mb-4">
-                <a class="btn btn-gradient col-sm-5  col-md-5 mr-3">Зарегистрироваться</a>
-                <p class="mr-2 mt-4">или</p> <a href="" class="btn-lang">Войдите в аккаунт</a>
+                <a class="btn btn-gradient col-6 col-sm-5 col-md-5 mr-3">Зарегистрироваться</a>
+                <p class="mr-2 mt-4">или</p> <a href="" class="btn-lang col-4">Войдите в аккаунт</a>
             </div>
 
             <div class="d-flex flex-column">
